# YTa-dlp

./: .gitignore  README.md  build-linux.sh  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: download-binaries.mjs  make-placeholder-icons.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bin.rs  commands.rs  db.rs  downloader.rs  error.rs  lib.rs  main.rs  queue.rs  sponsorblock.rs
src-tauri/src/ytdlp/: args.rs  mod.rs  progress.rs
src/lib/: ipc.ts  types.ts  utils.ts
src/lib/components/: AdvancedPanel.svelte  ChapterTimeline.svelte  DownloadCard.svelte  EnvCheck.svelte  HeaderDownloadIndicator.svelte  HeroCard.svelte  QueueView.svelte  SubtitlePicker.svelte  UrlInput.svelte
src/lib/stores/: downloads.ts  probe.ts  settings.ts
src/routes/: +layout.svelte  +page.svelte
